Added offers page css

--- a/Public/style.css
+++ b/Public/style.css
@@ -203,4 +203,40 @@ width: 100%;
 	font-size: 150%;
 	cursor: pointer;
 }
+
+/*Offer page table*/
+.container {
+  position: relative;
+  top: 100px;
+}
+
+table {
+  border-collapse: collapse;
+  width: 50%;
+  height: 0%;
+  position: relative;
+  top: 50px;
+  left: 500px;
+}
+
+td{
+  text-align: center;
+  width: 25%;
+}
+
+
+table th {
+  text-align: center;
+  color: #FFF;
+  padding: 4px 30px 4px 8px;
+}
+
+table tf{
+  border: 1px solid #e3e3e3;
+  padding: 4px 8px;
+}
+
+table tr:nth-child(odd) td {
+  background-color: #e7edf0;
+}
 /* End of modal */
