Grid layout for index

--- a/Public/style.css
+++ b/Public/style.css
@@ -14,13 +14,23 @@ html, body {
   box-sizing: border-box;
 }
 
+.results{
+	display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 4em 1fr 1fr;
+
+  grid-template-areas: "head head head";
+
+  min-height: 100%;
+  width: 100%;
+}
 .bg {
 	text-align: center;
   background: rgb(34, 142, 195);
 }
 
 .bg{
-	height: 100%;
+	min-height: 100%;
 	width:100%;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -122,27 +132,6 @@ a:hover {
 	background-color: Blue;
 }
 
-.productTable  {
-	font-size: 120%
-	font-family: sans-serif;
-
-	color: white;
-border-collapse: collapse;
-width: 100%;
-}
-
-  .productTable  th  {
-  border: 1em solid #dddddd;
-  text-align: center;
-  padding: 8em;
-}
-
-.productTable td{
-	text-align: left;
-	border: 1em solid #dddddd;
-	padding: 8em;
-}
-
 @media (max-width: 45em) {
   nav {
     margin: 0.25em;
@@ -202,41 +191,5 @@ width: 100%;
 	float:right;
 	font-size: 150%;
 	cursor: pointer;
-}
-
-/*Offer page table*/
-.container {
-  position: relative;
-  top: 100px;
-}
-
-table {
-  border-collapse: collapse;
-  width: 50%;
-  height: 0%;
-  position: relative;
-  top: 50px;
-  left: 500px;
-}
-
-td{
-  text-align: center;
-  width: 25%;
-}
-
-
-table th {
-  text-align: center;
-  color: #FFF;
-  padding: 4px 30px 4px 8px;
-}
-
-table tf{
-  border: 1px solid #e3e3e3;
-  padding: 4px 8px;
-}
-
-table tr:nth-child(odd) td {
-  background-color: #e7edf0;
 }
 /* End of modal */
