--- a/Public/style.css
+++ b/Public/style.css
@@ -193,3 +193,59 @@ a:hover {
 	cursor: pointer;
 }
 /* End of modal */
+.productTable  {
+	font-size: 120%
+	font-family: sans-serif;
+
+	color: white;
+border-collapse: collapse;
+width: 100%;
+}
+
+  .productTable  th  {
+  border: 1em solid #dddddd;
+  text-align: center;
+  padding: 8em;
+}
+
+.productTable td{
+	text-align: left;
+	border: 1em solid #dddddd;
+	padding: 8em;
+}
+
+*Offer page table*/
+.container {
+  position: relative;
+  top: 100px;
+}
+
+table {
+  border-collapse: collapse;
+  width: 50%;
+  height: 0%;
+  position: relative;
+  top: 50px;
+  left: 500px;
+}
+
+td{
+  text-align: center;
+  width: 25%;
+}
+
+
+table th {
+  text-align: center;
+  color: #FFF;
+  padding: 4px 30px 4px 8px;
+}
+
+table tf{
+  border: 1px solid #e3e3e3;
+  padding: 4px 8px;
+}
+
+table tr:nth-child(odd) td {
+  background-color: #e7edf0;
+}
