Log in styling changes

--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -697,7 +697,7 @@
 
 .modal-header {
   padding: 0.125em 1em;
-  background-color: #d84780;;
+  background-color: #282828;;
   color: white;
 }
 
@@ -709,16 +709,15 @@
 
 .modal-body {
   padding: 1em 1em;
-  background-color: #d84780;
+  background-color: #FFEBCD;
   font-family: 'Raleway', sans-serif;
-  height: 65vh;
+  height: 55vh;
   color: #fefefe;
   font-weight: 200;
   text-align: left;
   font-size: 16px;
   font-weight: 600;
-  display:inline-block;
-  margin: 8px 8px 10px 8px;
+  margin: 5px 5px 5px 5px;
 }
 
 .close{
