--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -697,7 +697,7 @@
 
 .modal-header {
   padding: 0.125em 1em;
-  background-color: #d84780;;
+  background-color: #282828;;
   color: white;
 }
 
@@ -709,16 +709,15 @@
 
 .modal-body {
   padding: 1em 1em;
-  background-color: #d84780;
+  background-color: #FFEBCD;
   font-family: 'Raleway', sans-serif;
-  height: 65vh;
+  height: 55vh;
   color: #fefefe;
   font-weight: 200;
   text-align: left;
   font-size: 16px;
   font-weight: 600;
-  display:inline-block;
-  margin: 8px 8px 10px 8px;
+  margin: 5px 5px 5px 5px;
 }
 
 .close{
@@ -817,16 +816,16 @@ label {
     margin-bottom: 15px;
     border-bottom: 1px solid $color-border;
   }
-  
- 
+
+
 
 .product {
   margin-bottom: 20px;
   padding-bottom: 10px;
   border-bottom: 1px solid $color-border;
-  
+
   }
-  
+
   .details {
     .product-title {
       margin-right: 20px;
@@ -837,11 +836,11 @@ label {
       line-height: 1.4em;
     }
   }
-  
+
   .quantity {
     input {
       width: 40px;
-      
+
     }
   }
   .totals-item-total {
