--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -677,7 +677,7 @@
 /* Modal Content */
 .modal-content {
   position: relative;
-  background-color: #fefefe;
+  background-color: #202020;
   margin: auto;
   padding: 0;
   border: 0.0625em solid #888;
@@ -686,19 +686,23 @@
 }
 
 .modal-content p{
-	color: Black;
+	color: White;
 }
 
 .modal-content h3{
-  color: Black;
+  color: White;
   margin: 0;
   padding: 0;
 }
 
 .modal-header {
   padding: 0.125em 1em;
-  background-color: #282828;;
-  color: white;
+  background-color: #d84780;
+  color: White;
+}
+
+.modal-header h2{
+	color: White;
 }
 
 .modal-header .fill{
@@ -709,10 +713,10 @@
 
 .modal-body {
   padding: 1em 1em;
-  background-color: #FFEBCD;
+  background-color: #202020;
   font-family: 'Raleway', sans-serif;
   height: 55vh;
-  color: #fefefe;
+  color: white;;
   font-weight: 200;
   text-align: left;
   font-size: 16px;
@@ -724,6 +728,7 @@
 	float:right;
 	font-size: 150%;
 	cursor: pointer;
+	color: White;
 }
 /* End of modal */
 .productTable  {
