--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -752,17 +752,20 @@ width: 100%;
 	padding: 8em;
 }
 
-*Offer page table*/
+*basket page table*/
 .container {
   position: relative;
   top: 100px;
 }
-
+.container img{
+	height: 150px;
+	width: 150px;
+}
 table {
   border-collapse: collapse;
-  width: 50%;
+  width: 100%;
   height: 0%;
-  position: relative;
+  position: center;
   top: 50px;
   left: 500px;
 }
@@ -775,20 +778,31 @@ td{
 
 table th {
   text-align: center;
-  color: #FFF;
+  color: white;
   padding: 4px 30px 4px 8px;
+	font-size: 150%;
 }
 
 table tf{
   border: 1px solid #e3e3e3;
   padding: 4px 8px;
+
 }
 
 table tr:nth-child(odd) td {
   background-color: #e7edf0;
   color: black;
+	text-shadow: 0.2px 0.2px black;
+	font-size: 110%;
 }
-
+table tr:nth-child(even) td {
+  background-color: inherit;
+  color: white;
+	font-size: 110%;
+}
+table tr:nth-child(odd) button {
+  box-shadow:  0.5px 0.5px 0.5px  black;
+}
 .basket{
 
 }
