--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -470,6 +470,10 @@
 		.button.medium {
 			padding: 0.80em 2em;
 			font-size: 1.6em;
+			
+		width: 100%;
+		text-align: center;
+		display: inline-block;
 		}
 
 /* Wrapper */
@@ -555,8 +559,8 @@
 	}
 
 		#banner p {
-			font-size: 1.75em;
-			line-height: 1.75em;
+			font-size: 1em;
+			line-height: 1em;
 		}
 
 	#banner strong,
@@ -620,6 +624,13 @@
 		text-align: center;
 		border-radius: 0px 0px 6px 6px;
 	}
+	
+div {
+    vertical-align:middle;
+    white-space: nowrap;
+    overflow: hidden;
+
+}
 
 /* results */
 .results img{
